[project]
name = "kaggle-cancer-classification"
version = "0.1.0"
description = "PyTorch ResNet18 binary classification for IDC cancer images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]
